--- a/src/app/exibe-resultado/exibe-resultado.component.html
+++ b/src/app/exibe-resultado/exibe-resultado.component.html
@@ -1,6 +1,6 @@
-<div *ngIf="cs.obterResultado()">
+<div class="resultado" *ngIf="cs.obterResultado()">
     <p>
-        Resultado= {{cs.obterResultado()}} <br/>
+        Resultado= {{cs.obterResultado() | number: '1.2-2'}} <br/>
         {{cs.mensagem}}
     </p>
 </div>
