--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+    margin: 10%;
+    font-family: 'Courier New', Courier, monospace;
+    background-color: rgb(250, 241, 215);
+    color: rgb(36, 129, 236);
+}
