--- a/src/app/obter-precos/obter-precos.component.css
+++ b/src/app/obter-precos/obter-precos.component.css
@@ -1,9 +1,41 @@
+
 label{
     display: block;
+    padding: 5px;
 }
 
 input[type='number']{
     width: 100%;
     height: 25px;
     margin-bottom: 1%;
+    border-radius: 5px;
+    border: 2px, solid rgb(36, 129, 236);
+    color:rgb(36, 129, 236);
+    padding: 5px;
+}
+
+input[type='button']{   
+    height: 40px;
+    width: 100px;
+    border-style: none;
+    border-radius: 9px;
+    background-color: rgb(36, 129, 236);
+    color:rgb(196, 250, 250);
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 15px;
+}
+
+input[type='button']:hover{
+    background-color: rgb(196, 250, 250);
+    border-style: solid;
+    border-color: rgb(36, 129, 236);
+    color: rgb(36, 129, 236);
+    cursor: pointer;
+}
+
+form{
+    padding: 50px;
+    background-color: rgb(196, 250, 250);
+    border: 3px solid rgb(36, 129, 236);
+    border-radius: 50px;
 }
